-Convert to Eureka Client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.datasource.username=sys as sysdba
 spring.datasource.password=Purple2424
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.Oracle12cDialect
 #spring.jpa.hibernate.ddl-auto= create
+
+server.port=${PORT:0}
+
+eurekaserver.port=8010
+
+spring.application.name=product
+
