--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,10 @@ spring.datasource.password=Purple2424
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.Oracle12cDialect
 #spring.jpa.hibernate.ddl-auto= create
 
-server.port=${PORT:0}
+#server.port=${PORT:0}
+server.port=8040
 
-eurekaserver.port=8010
+#eurekaserver.port=8010
 
 spring.application.name=product
 
